--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ snack_data.zip
 *.mp3
 darknet/
 snack_data/
+snack_data_old/
 test.py
 car.jpg
 
@@ -49,6 +50,10 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+
+tempCodeRunnerFile.py
+test1.py
+yolo_test.py
 
 # Unit test / coverage reports
 htmlcov/
